src/frontend/nameres/snapshots/shlang__frontend__nameres__tests__simple_vars.snap
---
source: src/frontend/nameres/tests.rs
expression: "test_nameres (\"var a = 1; var a = 1; var a = 1;\")"
---
Ok(
    [
        Declare(a@0 = Int(1)[8,9])[0,9],
        Declare(a@1 = Int(1)[19,20])[11,20],
        Declare(a@2 = Int(1)[30,31])[22,31],
    ],
)
