src/frontend/nameres/snapshots/shlang__frontend__nameres__tests__undefined_var.snap
---
source: src/frontend/nameres/tests.rs
expression: "test_nameres (\"var a = c;\")"
---
Err(
    UndefinedVar(
        "c",
    )[8,9],
)
