src/frontend/nameres/snapshots/shlang__frontend__nameres__tests__var_used_outside_scope.snap
---
source: src/frontend/nameres/tests.rs
expression: "test_nameres (\"do {var a = 10;}; var b = a;\")"
---
Err(
    UndefinedVar(
        "a",
    )[26,27],
)
