src/frontend/nameres/snapshots/shlang__frontend__nameres__tests__with_scopes.snap
---
source: src/frontend/nameres/tests.rs
description: "Test: with_scopes\n──────────────────────────────────────────────────────────────────────────────────\nfunc main(){\n\tvar a = 10;\n\tdo {\n\t\tvar a = a;\n\t}\n}"
expression: test_global_nameres (& source)
info: test_globals
---
Ok(
    ResolvedAst {
        proc: [
            Decl {
                id: 4,
                expr: Function(){
                    Decl {
                        id: 0,
                        expr: Int(10)[22:24],
                        is_global: false,
                    }[14:24],
                    Result(
                        Do {
                            Decl {
                                id: 1,
                                expr: Variable(0)[42:43],
                                is_global: false,
                            }[34:43],
                        },
                    )[30:47],
                }[5:12],
                is_global: true,
            }[5:12],
        ],
        global_count: 5,
        local_count: 0,
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "main",
            5: "a",
        },
        file_id: FileId(1),
    },
)
